sign page overflow fixed

--- a/src/styles/Sign/sign.scss
+++ b/src/styles/Sign/sign.scss
@@ -3,6 +3,7 @@ $color: rgb(137, 74, 232);
 // main page setup
 .signup {
     @include beginHead;
+    overflow-x: hidden;
 }
 // center form
 .sign-form {
